# MAV_apps

./: .gitignore  README.md  getMicro  micro.init  turnoff_cores.bash
SLAM_All/: start_stop.cpp
common/: Drone.cpp  Drone.h  Profiling.h  README.md  autoencoder.cpp  autoencoder.h  autoencoder.json  autoencoder_control.json  autoencoder_envgen.json  autoencoder_planning.json  autoencoder_sparse.h5  autoencoder_sparse.json  bounding_box.h  common.cpp  common.h  control_drone.cpp  control_drone.h  control_drone_node.cpp  coord.h  objdetect.cpp  objdetect.h  panic_pcl.cpp  timer.h
common/ROSFI/: CMakeLists.txt  package.xml
common/ROSFI/src/: .rosfi.cpp.swp  addrSpace.h  config.h  debugstream.h  options.cpp  regManip.cpp  regManip.h  rosfi.cpp  utils.h
common/control_drone/: CMakeLists.txt  control_drone_node.cpp  generate_paths.py  probe_drone.cpp
common/data_collection/: CMakeLists.txt  package.xml  test_benches.cpp  tests.cpp
common/dummy/: CMakeLists.txt  package.xml
common/filter_queue/: CMakeLists.txt  package.xml
common/follow_trajectory/: CMakeLists.txt
common/future_collision/: CMakeLists.txt
common/gps_publisher/: CMakeLists.txt
common/launch/: control.launch  img_publisher_test.launch
common/mavbench_msgs/: CMakeLists.txt  package.xml
common/profile_manager/: CMakeLists.txt  package.xml
common/publish_imu/: CMakeLists.txt
common/run_time/: CMakeLists.txt  package.xml  setup.py
data_bu/: scratch.txt  stats.json  stats.txt
data_bu/follow_the_leader/: node_profiling.json
data_bu/mapping/: blah.json  blah2.json  data_1.json  node_profiling.json  ok  stats.json
data_bu/package_delivery/: blah.json  data_2.json  node_profiling.json  stats.json
data_bu/sar/: data_1.json
data_bu/scanning/: data_1.json  data_2.json  stats.json
data_processing/accel_vel_relationship/: data.py  data2.py  plot.py
data_processing/common_utils/: EnvGenParser.py  __init__.py  calc_sampling_time.py  common_plots.py  data_parsing.py  results.txt  sampling_plot.py  utils.py
data_processing/knob_performance_modeling/: plot.py
data_processing/lower_res_time_budget/: plot.py
data_processing/map_resolution_time_budget/: plot.py
data_processing/measure_response_time_vel_relationship/: readMe  stats.json  summary_results
data_processing/theoreticall_max_vel/: plot_vel.py
data_processing/velocity_profile/: blah.py  ok  sampling_plot.py  stats.json
debuggers/launch/: rqt.launch
error_detector/: CMakeLists.txt  package.xml
error_detector/src/: .error_detector.cpp.swp  cam-feat.hpp  error_detector.cpp
follow_the_leader/: CMakeLists.txt
follow_the_leader/launch/: blah.launch  control_drone.launch  detection_node.launch  dummy.launch  follow_the_leader.launch  tracking_node.launch
follow_the_leader/src/: buffer_then_track.cpp  detect.cpp  error.cpp  error.h  follow_the_leader.cpp  pid.cpp  pid.h  pid_thread.cpp  track.cpp  track.h  track_continously.cpp
gps_publisher/: CMakeLists.txt
gps_publisher/src/: gpsPublisher.cpp
mapping_and_sar/: CMakeLists.txt
mapping_and_sar/launch/: 2  blah  mapping.launch  mav_inspector.launch  octomap.launch  package_delivery.launch  perception.launch  point_cloud_and_pose.launch  sar.launch
mapping_and_sar/resource/: mapping.yaml
mapping_and_sar/src/: 2  follow_trajectory.cpp  future_collision.cpp  mapping.cpp  object_detection_node.cpp  occupancy_map_node.cpp  publish_pose.cpp  sar.cpp
misc/: parse_data.py  turnoff_cores.bash
misc/data_parsing/: parse_data.py
misc/perf/: perf_ros.py
modified_dep/depth_image_proc_with_spin/: CMakeLists.txt  package.xml
modified_dep/depth_image_proc_with_spin/src/nodelets/: point_cloud_xyz.cpp  point_cloud_xyz.cpp_bu
package_delivery/: .CMakeLists.txt.swn  .CMakeLists.txt.swo  CMakeLists.txt  CMakeLists.txt_bu  RRTstar_yaw.json  nodelet_plugins.xml  ok  package.xml
package_delivery/extras/: clean.sh  rvizConfig.rviz  ssh_host
package_delivery/launch/: .package_delivery.launch.swp  :w  ;  ;;  blah.launch  blah2.launch  image_pipeline.launch  important_knobs  obstacle_avoidance_test.launch  octomap.launch  package_delivery.launch  package_delivery_old.launch  scanning.launch  simple.launch  super_simple.launch
package_delivery/msg/: blah
package_delivery/src/: .future_collision.cpp.swp  blah  follow_trajectory.cpp  future_collision.cpp  future_collision_nodelet.cpp  future_collision_old.cpp_bu  global_planner.cpp  graph.cpp  graph.h  motion_planner.cpp  motion_planner.cpp_bu  motion_planner.cpp_tmp  motion_planner.h  motion_planner_node.cpp  motion_planner_nodelet.cpp  obstacle_avoidance_test.cpp  occupancy_map_node.cpp  package_delivery.cpp  package_delivery.cpp_2  package_delivery_save.cpp  scanning.cpp
package_delivery/srv/: get_trajectory.srv  point.srv
phoenix_msg/: CMakeLists.txt  package.xml
phoenix_msg/msg/: error.msg
position_estimator/: CMakeLists.txt  package.xml
position_estimator/src/: position_estimator.cpp
pre_mission/control_drone/: pre_mission_cmds.sh
pre_mission/follow_the_leader/: pre_mission_cmds.sh
pre_mission/mapping/: mapping_init_behzad.txt  pre_mission_cmds.sh  (+1 more)
run_time/: bind_nodes.py  blah  supervisor.py
(+280 files in other folders)
